--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
 
         <activity
             android:name=".GachaActivity"/>
+
+
+        <activity
+            android:name=".HomeActivity"/>
     </application>
 
 </manifest>
