added daytime/nighttime sprite, added additional capy sprites, linked pethome activity to app flow

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity
             android:name=".GachaActivity"/>
+
+        <activity
+            android:name=".PethomeActivity"/>
 
     </application>
 
