--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         <activity
             android:name=".PethomeActivity"/>
 
+        <activity android:name=".SettingsActivity"
+            android:label="Settings"/>
+
     </application>
 
 </manifest>
